add processhunt et hidden kickstarter

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
     <h3>flowcontroler</h3>
     <p>Artificial inteligence for production optimisation</p>
         </div></a>
+      
+      <!-- Processhunt ACTIF -->
+      <a class="active" href="http://processhunt.com ">
+  <div class="circle col-xs-* col-md-3" >
+    <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/14457499_537760433093809_4133973973728325699_n.jpg?oh=8844b29968dfa019039906488cde9ee5&oe=586DA88F" class="w3-circle" alt="Norway">
+    <h3>ProcessHUNT</h3>
+    <p>Process engineer, find best tools. </p>
+        </div></a>
 
 <!-- Thermomol INACTIF-->
       <div class="circle wait col-xs-* col-md-3" >
@@ -102,9 +110,9 @@
     <h3>Pilot outsourcing</h3>
     <p>Quick process for pilot step</p>
   </div>
-<!-- heater ACTIF -->
+<!-- heater IACTIF -->
       <a class="active" href="http://heater.fertec.fr">
-        <div class="circle col-xs-* col-md-3" >
+        <div class="circle wait col-xs-* col-md-3" >
           <img src="kick_bulle.jpg" class="w3-circle" alt="Norway">
           <h3>Kickstarter heater</h3>
           <p>The new heater !</p>
@@ -112,7 +120,7 @@
       </a>
 
 
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
      </div>
 </div>
   </body>
