add change of hse.fertec.fr

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>Free sizing colomns of absorption gaz-liquid</p>
         </div></a>
 <!-- HSE bot ACTIF -->
-      <a class="active" href="http://hse.venturebot.xyz/">
+      <a class="active" href="http://hse.fertec.fr/">
   <div class="circle col-xs-* col-md-3" >
     <img src="hsebot.png" class="w3-circle" alt="Norway">
     <h3>HSE Bot</h3>
