--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>FERTEC2</title>
+    <title>FERTEC</title>
 
 
 
@@ -23,8 +23,7 @@
         <div class="nav navbar-nav">
           <a class="nav-item nav-link text-right" href="#"><h3>FERTEC</h3> </a><div class="col-md-12">  </div>
           <a class="nav-item nav-link active "   href="fertec.fr"> Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link " href="fertec.fr/products">Products</a>
-          <a class="nav-item nav-link " href="fertec.fr/contact">Contact</a>
+          <a class="nav-item nav-link " href="https://twitter.com/ferte_c">Contact</a>
         </div>
       </nav>
 <br><br>
@@ -59,7 +58,7 @@
     <h3>flowcontroler</h3>
     <p>Artificial inteligence for production optimisation</p>
         </div></a>
-      
+
       <!-- Processhunt ACTIF -->
       <a class="active" href="http://processhunt.com ">
   <div class="circle col-xs-* col-md-3" >
@@ -76,7 +75,7 @@
   </div>
 <!-- catesy INACTIF-->
       <div class="circle wait col-xs-* col-md-3" >
-    <img src="catesy.png" class="w3-circle" alt="Norway">
+    <img src="https://scontent-cdg2-1.xx.fbcdn.net/t31.0-8/14102875_524482921088227_559798228512139990_o.jpg" class="w3-circle" alt="Norway">
     <h3>catesy</h3>
         <p>Catalyzer regenerator and 3D printer</p>
   </div>
@@ -119,7 +118,12 @@
         </div>
       </a>
 
-
+<!-- pilot INACTIF -->
+      <div class="circle wait col-xs-* col-md-3" >
+    <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/14449816_537764603093392_6279510094118390491_n.jpg?oh=aa25bbf9482527597b0869b58ac921d3&oe=58638E1A" class="w3-circle" alt="Norway">
+    <h3>Nutrition pills</h3>
+    <p>your pills just for you.</p>
+  </div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
      </div>
 </div>
